Dragging with grabby-hands tends to hide the thing its grabbing. Arrow is better. Maybe fixed the problem with the dragged thing (the helper clone) sliding underneath the drop-target (too low zindex).

--- a/qoolbar.css
+++ b/qoolbar.css
@@ -30,7 +30,7 @@
 }
 
 .qool-verb {   /* in the qoolbar */
-    cursor: move;   /* draggable */
+    /*cursor: move;   !* draggable *!*/
 }
 
 .qool-icon {   /* decorating a target (a word-associated thingie) */
